# videoedit

DongCi_Android/curllibrary/: CMakeLists.txt  build.gradle
DongCi_Android/curllibrary/src/main/: AndroidManifest.xml
DongCi_Android/curllibrary/src/main/cpp/: wltrace.cpp  wltrace.h
DongCi_Android/curllibrary/src/main/java/com/example/curllibrary/: Curl.java
DongCi_Android/curllibrary/src/main/res/values/: strings.xml
DongCi_Android/dongciSDK_android/: CMakeLists.txt
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/activity/: BaseCustomView.java  FilterPanelAdapter.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/api/: DCCameraConfig.java  DCCameraManager.java  DCPlayerManager.java  DCRecorderCore.java  DCRecorderTimeConfig.java  DCVideoExportManager.java  DCVirtualVideo.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/api/apiTest/: VideoComposeAct.java  VideoExportAct.java  VideoPlayAcctivity.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/api/listener/: DCCutListener.java  DCExportListener.java  DCVideoListener.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/camera/: CameraCaptureView.java  CameraConstentValues.java  CameraFilter.java  CameraView.java  VideoInfo.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/coder/: MediaCodecInfo.java  TextureMovieEncoder.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/coder/audioCodec/: AudioCodec.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/coder/videoCodec/: VideoClipper.java  VideoEncoderCore.java  VideoRunnable.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/common/: ExtCircleImageView.java  FileUtils.java  FocusImageView.java  GraphicsHelper.java  Rotation.java  SLMediaController.java  SLVideoCompressor1.java  SLVideoProcessor.java  SyncPlayer.java  SyncRecord.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/gles/: CameraDrawer.java  CameraEGLRender.java  EglCore.java  EglSurfaceBase.java  MatrixUtils.java  SLOutputSurface.java  SLTextureRenderer.java  TextureRender.java  TextureRotationUtil.java  WindowSurface.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/gles/filter/: FilterJson.java  FilterUtils.java  FiterJsonUtils.java  MagicFilterType.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/gles/filter/diyfilter/: FWHudsonFilter.java  FWSutroFilter.java  GPUImageBeautifyFilter.java  GPUImageCannyEdgeDetectionFilter.java  GPUImageCombinationFilter.java  GPUImageFiveInputFilter.java  GPUImageFourInputFilter.java  GPUImageHSBFilter.java  GPUImageLowPassFilter.java  GPUImageMaskFilter.java  GPUImagePolkaDotFilter.java  GPUImageSingleComponentGaussianBlurFilter.java  GPUImageThreeInputFilter.java  GPUImageZoomBlurFilter.java  LFGPUImageGaussianBlurFilter.java  MagicSakuraFilter.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/gles/filter/filternew/: GPUImage3x3ConvolutionFilter.java  GPUImage3x3TextureSamplingFilter.java  GPUImageAddBlendFilter.java  GPUImageAlphaBlendFilter.java  GPUImageBoxBlurFilter.java  GPUImageBulgeDistortionFilter.java  GPUImageColorBurnBlendFilter.java  (+28 more)
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/libffmpeg/: FfmpegLogLevel.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/player/: DCAsset.java  DCAssetImageWrapper.java  DCAssetImagesWrapper.java  DCAssetInfo.java  DCAssetVideoWrapper.java  DCGLRenderer.java  DCInputSurface.java  DCMediaInfoExtractor.java  DCOptions.java  DCPlayer.java  DCPlayerImpl.java  DCScene.java  DCSceneWrapper.java  DCTransition.java  DcSurfaceView.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/player/renderObject/: DCRenderImage.java  DCRenderImages.java  DCRenderObject.java  DCRenderVideo.java
DongCi_Android/dongciSDK_android/src/main/java/com/dongci/sun/gpuimglibrary/player/script/: DCActor.java  DCScript.java  DCScriptManager.java  DCTimeEvent.java  DCTimeEventManager.java
DongCi_Android/dongciSDK_android/src/main/jni/generated-src/: ffmpeg_processor.hpp  transcode_listener.hpp
DongCi_Android/dongciSDK_android/src/main/jni/handwritten-src/: ffmpeg_hw.c  ffmpeg_processor_impl.cpp  ffmpeg_processor_impl.hpp
DongCi_Android/dongciSDK_android/src/main/jni/handwritten-src/ffmpeg/: cmdutils.h  ffmpeg.c  ffmpeg_filter.c  mathops.c
DongCi_Android/dongciSDK_android/src/main/jni/handwritten-src/ffmpeg/x86/: mathops.h
DongCi_Android/dongciSDK_android/src/main/jni/handwritten-src/foundation/Archive/: WindowsTypeHelper.h  async_worker.hpp  file_manager.h  float_util.hpp  waiting_queue.hpp
DongCi_Android/dongciSDK_android/src/main/jni/handwritten-src/media/: media_info.cpp  media_info.hpp
DongCi_Android/dongciSDK_android/src/main/jni/jni/: NativeFfmpegConfiguration.cpp  NativeFfmpegLogLevel.hpp  NativeFfmpegProcessor.cpp  NativeFfmpegProcessor.hpp  NativeFfmpegWatermark.hpp  NativeTranscodeListener.cpp  NativeTranscodeListener.hpp
DongCi_Android/dongciSDK_android/src/main/res/anim/: anim_rotate_left.xml  loading_repeat.xml
DongCi_Android/dongciSDK_android/src/main/res/drawable/: video_seekbar_thumb_red.xml
DongCi_Android/dongciSDK_android/src/main/res/layout/: act_videoplay.xml  activity_click_video.xml  activity_dc_test.xml  activity_video_compose.xml
DongCi_Android/dongciSDK_android/src/main/res/values/: dimens.xml  strings.xml  styles.xml
(+1924 files in other folders)
